Basic skeleton steps to get webapp running

--- a/.provision/ansible_config/basic-provision.yml
+++ b/.provision/ansible_config/basic-provision.yml
@@ -21,4 +21,8 @@
 
     roles:
       - remote-ping
+      - create-webapp-user
+      - install-dotnet-core
+      - install-nginx
+      - setting-up-webapp
 
