Basic dotNet worker to log stuff
For the most part, blindly copied this over from my
droplet_provisioner project

--- a/.provision/ansible_config/basic-provision.yml
+++ b/.provision/ansible_config/basic-provision.yml
@@ -25,4 +25,6 @@
       - install-dotnet-core
       - install-nginx
       - setting-up-webapp
+      - configure-systemd-journal-logging
+      - setting-up-worker
 
