--- a/blog/blog.roman015.com.csproj
+++ b/blog/blog.roman015.com.csproj
@@ -4,4 +4,24 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="WyamBlog\**" />
+    <Compile Remove="WyamBlog\**" />
+    <EmbeddedResource Remove="WyamBlog\**" />
+    <None Remove="WyamBlog\**" />
+  </ItemGroup>
+
+  <Target Name="MyPreCompileTarget" BeforeTargets="Build">
+    <Exec Command="wyam -c $(ProjectDir)WyamBlog\config.wyam -i $(ProjectDir)WyamBlog\input\ -o $(ProjectDir)Wyam\" />
+    <Exec Command="echo WYAM BUILD COMPLETE" />
+    <Exec Command="copy $(ProjectDir)Wyam\index.html $(ProjectDir)wwwroot\index.html" />
+    <Exec Command="echo WYAM INDEX COPY COMPLETE" />
+  </Target>
+
+  <Target Name="MyPostCompileTarget" AfterTargets="Publish">  
+    <Exec Command="echo COPYING WYAM FILES" />
+    <Exec Command="xcopy /Y /I /S $(ProjectDir)Wyam $(ProjectDir)$(PublishDir)Wyam" />    
+    <Exec Command="echo COPYING WYAM FILES COMPLETE" />
+  </Target>
+
 </Project>
