Dns records must be proxied

--- a/.provision/ansible_config/roles/update-webapp-dns-records/tasks/main.yml
+++ b/.provision/ansible_config/roles/update-webapp-dns-records/tasks/main.yml
@@ -5,6 +5,8 @@
       zone: "{{ dns_zone }}"
       record: "{{ dns_www_record }}"
       type: A
+      proxied: yes
       value: "{{ working_host }}"
       account_email: "{{ dns_cloudflare_account_email }}"
       account_api_token: "{{ dns_cloudflare_api_token }}"
+      state: present
