Updating DNS records
* Renaming ansible role to update-dns-records
* marking the ssh sub-domain as absent (since we do not want the
  IP address to be exposed)
* creating a new blog sub-domain that is proxied via Cloudflare

--- a/.provision/ansible_config/basic-provision.yml
+++ b/.provision/ansible_config/basic-provision.yml
@@ -27,5 +27,5 @@
       - setting-up-webapp
       - configure-systemd-journal-logging
       - setting-up-worker
-      - update-webapp-dns-records
+      - update-dns-records
 
