--- a/.provision/ansible_config/roles/update-dns-records/tasks/main.yml
+++ b/.provision/ansible_config/roles/update-dns-records/tasks/main.yml
@@ -11,12 +11,23 @@
       account_api_token: "{{ dns_cloudflare_api_token }}"
       state: present
 
-  - name: Create DNS record for ssh
+  - name: Remove DNS record for ssh
     cloudflare_dns:
       zone: "{{ dns_zone }}"
       record: "ssh"
       type: A
       proxied: no
+      value: "{{ working_host }}"
+      account_email: "{{ dns_cloudflare_account_email }}"
+      account_api_token: "{{ dns_cloudflare_api_token }}"
+      state: absent
+
+  - name: Create DNS record for blog
+    cloudflare_dns:
+      zone: "{{ dns_zone }}"
+      record: "{{ dns_blog_record }}"
+      type: A
+      proxied: yes
       value: "{{ working_host }}"
       account_email: "{{ dns_cloudflare_account_email }}"
       account_api_token: "{{ dns_cloudflare_api_token }}"
