--- a/.provision/ansible_config/roles/install-dotnet-core/tasks/main.yml
+++ b/.provision/ansible_config/roles/install-dotnet-core/tasks/main.yml
@@ -54,3 +54,13 @@
     with_items:
       - 'dotnet-sdk-3.1'
       - 'dotnet-sdk-2.1'
+
+  # https://wyam.io/docs/usage/obtaining
+  - name: Install WYAM globally
+    become: yes
+    become_user: "{{ webapp_user }}"
+    shell: dotnet tool update --global Wyam.Tool --version 3.1.3
+  # NOTE: The original command was `dotnet tool install ...` , but running this
+  #       a second time returns an error. The update command apparently installs 
+  #       the tool if it isn't present, and does not return an error if it is 
+  #       present. This works better for this script.   
