Create certificates using certbot
* does auto-renewal as well
* should enable HTTPS for test sub-domain

--- a/.provision/ansible_config/roles/install-nginx/tasks/main.yml
+++ b/.provision/ansible_config/roles/install-nginx/tasks/main.yml
@@ -12,6 +12,11 @@
       rule: allow
       name: "Nginx HTTP"
 
+  - name: Allow HTTPS for nginx in firewall
+    ufw:
+      rule: allow
+      name: "Nginx Full"
+
   - name: Allow SSH in firewall
     ufw:
       rule: allow
