--- a/.provision/ansible_config/roles/update-dns-records/tasks/main.yml
+++ b/.provision/ansible_config/roles/update-dns-records/tasks/main.yml
@@ -5,7 +5,7 @@
       zone: "{{ dns_zone }}"
       record: "{{ dns_www_record }}"
       type: A
-      proxied: no
+      proxied: yes
       value: "{{ working_host }}"
       account_email: "{{ dns_cloudflare_account_email }}"
       account_api_token: "{{ dns_cloudflare_api_token }}"
@@ -16,7 +16,7 @@
       zone: "{{ dns_zone }}"
       record: "{{ dns_blog_record }}"
       type: A
-      proxied: no
+      proxied: yes
       value: "{{ working_host }}"
       account_email: "{{ dns_cloudflare_account_email }}"
       account_api_token: "{{ dns_cloudflare_api_token }}"
