--- a/.provision/ansible_config/roles/setting-up-webapp/tasks/main.yml
+++ b/.provision/ansible_config/roles/setting-up-webapp/tasks/main.yml
@@ -6,7 +6,14 @@
       src: /home/{{ webapp_user }}/web_project/www
       dest: /var/www/site-www
 
-  - name: Publish dotNet project
+  - name: update appsettings.json from environment
+    become: yes
+    become_user: "{{ webapp_user }}"  
+    template: 
+      src: appsettings.json.j2 
+      dest: /var/www/site-www/appsettings.json
+
+  - name: Publish dotNetWebApp project
     become: yes
     become_user: "{{ webapp_user }}"
     shell: dotnet publish
