--- a/www/appsettings.Development.json
+++ b/www/appsettings.Development.json
@@ -1,17 +1,17 @@
 {
   "Authentication": {
     "AzureAdB2C": {
-    "ClientId": "AUREB2C_CLIENTID",
-    "Tenant": "AUREB2C_TENANT",
-    "SignUpSignInPolicyId": "AUREB2C_SIGNUPSIGNIN_POLICY_ID",
-    "ResetPasswordPolicyId": "AUREB2C_RESET_PASSWORD_POLICY_ID",
-    "EditProfilePolicyId": "AUREB2C_EDIT_PROFILE_POLICY_ID",
-    "RedirectUri": "AUREB2C_REDIRECT_URI",
-    "ClientSecret" : "AUREB2C_CLIENT_SECRET",
-    "ApiUrl": "AUREB2C_API_URI_HTTPS",
-    "ApiScopes": "AUREB2C_APISCOPES"
+      "ClientId": "AZUREB2C_CLIENTID",
+      "Tenant": "AZUREB2C_TENANT",
+      "SignUpSignInPolicyId": "AZUREB2C_SIGNUPSIGNIN_POLICY_ID",
+      "ResetPasswordPolicyId": "AZUREB2C_RESET_PASSWORD_POLICY_ID",
+      "EditProfilePolicyId": "AZUREB2C_EDIT_PROFILE_POLICY_ID",
+      "RedirectUri": "AZUREB2C_REDIRECT_URI",
+      "ClientSecret" : "AZUREB2C_CLIENT_SECRET",
+      "ApiUrl": "AZUREB2C_API_URI_HTTPS",
+      "ApiScopes": "AZUREB2C_APISCOPES"
     }
-  },
+  }, 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
