Adding environment variables, cloning scripts repo
Tweaking bash environment variables for scripts to access and
cloning the scripts to roman's droplet.

NOTE: The environment variable update will affect *all* users.
Since this is not a public box, I think it should be ok.

--- a/.provision/ansible_config/group_vars/all.yml
+++ b/.provision/ansible_config/group_vars/all.yml
@@ -27,3 +27,10 @@ azureb2c_redirect_uri: temp
 azureb2c_client_secret: temp
 azureb2c_api_uri_https: temp
 azureb2c_apiscopes: temp
+
+# Variables for Terraria server
+terraria_dotoken: temp
+terraria_discord_bot_token: temp
+terraria_discord_channel: temp
+terraria_setup_server_repo: https://github.com/abrahamvarricatt/terraria_on_digital_ocean.git
+
