--- a/.provision/ansible_config/roles/scripts-to-manage-terraria-server/tasks/main.yml
+++ b/.provision/ansible_config/roles/scripts-to-manage-terraria-server/tasks/main.yml
@@ -44,3 +44,12 @@
       - docker-ce
       - docker-ce-cli
       - containerd.io
+
+  - name: "Install docker-machine to /usr/local/bin"
+    shell: |
+      base=https://github.com/docker/machine/releases/latest/download && 
+      curl -L $base/docker-machine-$(uname -s)-$(uname -m) >/tmp/docker-machine &&
+      sudo mv /tmp/docker-machine /usr/local/bin/docker-machine &&
+      chmod +x /usr/local/bin/docker-machine
+    args:
+      creates: "/usr/local/bin/docker-machine"
