--- a/worker/dotNetWorker.csproj
+++ b/worker/dotNetWorker.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="3.1.1" />
+    <PackageReference Include="Discord.Net" Version="2.2.0" />
   </ItemGroup>
 </Project>
