More logs, channel filter
Adding more log messages to understand the control flow. Also,
filtering out messages so that only #general is processed.

--- a/worker/config.json
+++ b/worker/config.json
@@ -1,3 +1,5 @@
 {
-    "Prefix": "!"
+    "Prefix": "!",
+    "channel-general": 114991657509847045,
+    "channel-shell-output": 713727388701294592
 }
