Try to copy over SSH key from CircleCI to remote droplet

--- a/.provision/ansible_config/roles/scripts-to-manage-terraria-server/tasks/main.yml
+++ b/.provision/ansible_config/roles/scripts-to-manage-terraria-server/tasks/main.yml
@@ -37,3 +37,20 @@
       update_cache: yes
     with_items:
       - 'ansible'
+
+  - name: Add .ssh directory for webapp_user
+    file:
+      path: /home/{{ webapp_user }}/.ssh
+      state: directory
+      mode: 0700
+      owner: "{{ webapp_user }}"
+      group: "{{ webapp_user }}"
+
+  - name: Copy over SSH keys
+    copy:
+      src: /root/.ssh/id_rsa_e9f326a7c682d116c4fad602253958b4
+      dest: /home/{{ webapp_user }}/.ssh/id_rsa
+      owner: "{{ webapp_user }}"
+      group: "{{ webapp_user }}"
+      mode: 0600
+
