--- a/www/www.roman015.com.csproj
+++ b/www/www.roman015.com.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="5.5.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.5.0" />
     <PackageReference Include="QRCoder" Version="1.3.6" />
+    <PackageReference Include="Sentry" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
