--- a/www/appsettings.json
+++ b/www/appsettings.json
@@ -19,5 +19,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Sentry": {
+    "Dsn": "https://d257da19dc22412fa4bc587737dbd577@o400378.ingest.sentry.io/5258767",
+    "IncludeRequestPayload": true,
+    "SendDefaultPii": true,
+    "MinimumBreadcrumbLevel": "Debug",
+    "MinimumEventLevel": "Warning",
+    "AttachStackTrace": true,
+    "Debug": true,
+    "DiagnosticsLevel": "Error"
+  },
   "AllowedHosts": "*"
 }
