--- a/.provision/ansible_config/roles/update-dns-records/tasks/main.yml
+++ b/.provision/ansible_config/roles/update-dns-records/tasks/main.yml
@@ -1,5 +1,16 @@
 ---
 
+  name: Create Default DNS record for www project
+    cloudflare_dns:
+      zone: "{{ dns_zone }}"
+      record: "@"
+      type: A
+      proxied: yes
+      value: "{{ working_host }}"
+      account_email: "{{ dns_cloudflare_account_email }}"
+      account_api_token: "{{ dns_cloudflare_api_token }}"
+      state: present
+
   - name: Create DNS record for www project
     cloudflare_dns:
       zone: "{{ dns_zone }}"
