--- a/www/appsettings.json
+++ b/www/appsettings.json
@@ -29,5 +29,6 @@
     "Debug": true,
     "DiagnosticsLevel": "Error"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UrlShortenerConnectionString": "URLSHORTENER_CONNECTIONSTRING"
 }
