Renamed to Roman015 in manifest

--- a/wwwroot/manifest.json
+++ b/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "HomePage",
-  "short_name": "HomePage",
+  "name": "Roman015",
+  "short_name": "Roman015",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
