Auth0 Authentication Added

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ obj/
 .vs/
 /Properties/PublishProfiles/FolderProfile.pubxml.user
 /Properties/PublishProfiles/FolderProfile.pubxml
+/wwwroot/appsettings.json
