--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0EnvironmentVars": {
+    "Authority": "Auth0_Authority", //https://<YOUR_AUTH0_DOMAIN>
+    "ApiIdentifier": "Auth0_ApiIdentifier" //<YOUR_API_IDENTIFIER>
+  }
 }
