Moved to AzureAD

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "Auth0EnvironmentVars": {
-    "Authority": "Auth0_Authority", //https://<YOUR_AUTH0_DOMAIN>
-    "ApiIdentifier": "Auth0_ApiIdentifier" //<YOUR_API_IDENTIFIER>
+  "AzureAdEnvironmentVars": {
+    "AzureAdDomain"  : "AzureAdDomain",
+    "AzureAdTenantId": "AzureAdTenantId",
+    "AzureAdClientId": "AzureAdClientId"
   }
 }
