Added wyam nuget package

--- a/blog.roman015.com.csproj
+++ b/blog.roman015.com.csproj
@@ -26,4 +26,8 @@
     <None Remove="WyamBlog\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Wyam" Version="2.2.9" />
+  </ItemGroup>
+
 </Project>
