--- a/blog.roman015.com.csproj
+++ b/blog.roman015.com.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <Target Name="MyPreCompileTarget" BeforeTargets="Build">
@@ -9,8 +9,16 @@
     <Exec Command="echo INSTALLING WYAM" />
     <Exec Command="dotnet tool install -g Wyam.Tool" ContinueOnError="true" Condition=" '$(OS)' != 'Windows_NT' " />
 
+    <Exec Command="echo INSTALLING .NET 2.1 For Non-Windows System" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="apt-get update" ContinueOnError="true" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="apt-get update" ContinueOnError="true" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="apt-get update" ContinueOnError="true" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="apt-get install -y apt-transport-https" ContinueOnError="true" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="apt-get update" ContinueOnError="true" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="apt-get install -y dotnet-sdk-2.1" ContinueOnError="true" Condition=" '$(OS)' != 'Windows_NT' " />
+
     <Exec Command="echo BUILDING WYAM" />
-    <Exec Command="dotnet /github/home/.dotnet/tools/.store/wyam.tool/2.2.9/wyam.tool/2.2.9/tools/netcoreapp2.1/any/Wyam.dll -c $(ProjectDir)WyamBlog/config.wyam -i $(ProjectDir)WyamBlog/input/ -o $(ProjectDir)Wyam/" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="/github/home/.dotnet/tools/wyam -c $(ProjectDir)WyamBlog/config.wyam -i $(ProjectDir)WyamBlog/input/ -o $(ProjectDir)Wyam/" Condition=" '$(OS)' != 'Windows_NT' " />
     <Exec Command="wyam -c $(ProjectDir)WyamBlog\config.wyam -i $(ProjectDir)WyamBlog\input\ -o $(ProjectDir)Wyam\" Condition="'$(OS)' == 'Windows_NT'" />
        
 
@@ -30,10 +38,18 @@
   </Target>
 
   <ItemGroup>
+    <Compile Remove="Pages\**" />
     <Compile Remove="WyamBlog\**" />
+    <Content Remove="Pages\**" />
     <Content Remove="WyamBlog\**" />
+    <EmbeddedResource Remove="Pages\**" />
     <EmbeddedResource Remove="WyamBlog\**" />
+    <None Remove="Pages\**" />
     <None Remove="WyamBlog\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Startup.cs" />
   </ItemGroup>
 
   <ItemGroup>
