--- a/blog.roman015.com.csproj
+++ b/blog.roman015.com.csproj
@@ -1,11 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <Target Name="MyPreCompileTarget" BeforeTargets="Build">
 
+    <Exec Command="echo INSTALL WYAM" />
+    <Exec Command="wget https://packages.microsoft.com/config/debian/10/packages-microsoft-prod.deb -O packages-microsoft-prod.deb" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="dpkg -i packages-microsoft-prod.deb" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="apt-get update" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="apt-get install -y apt-transport-https" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="apt-get update" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="apt-get install -y dotnet-sdk-2.1" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="dotnet tool install -g Wyam.Tool" Condition=" '$(OS)' != 'Windows_NT' " />
+    
     <Exec Command="echo BUILDING WYAM" />
     <Exec Command="/github/home/.dotnet/tools/wyam -c $(ProjectDir)WyamBlog/config.wyam -i $(ProjectDir)WyamBlog/input/ -o $(ProjectDir)Wyam/" Condition=" '$(OS)' != 'Windows_NT' " />
     <Exec Command="wyam -c $(ProjectDir)WyamBlog\config.wyam -i $(ProjectDir)WyamBlog\input\ -o $(ProjectDir)Wyam\" Condition="'$(OS)' == 'Windows_NT'" />
@@ -27,24 +36,22 @@
   </Target>
 
   <ItemGroup>
+    <Compile Remove="Pages\**" />
     <Compile Remove="WyamBlog\**" />
+    <Content Remove="Pages\**" />
     <Content Remove="WyamBlog\**" />
+    <EmbeddedResource Remove="Pages\**" />
     <EmbeddedResource Remove="WyamBlog\**" />
+    <None Remove="Pages\**" />
     <None Remove="WyamBlog\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="dotnet-install.sh" />
+    <Compile Remove="Startup.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Pages\Error.cshtml" />
-    <None Include="Pages\Index.cshtml" />
-    <None Include="Pages\Privacy.cshtml" />
-    <None Include="Pages\Shared\_Layout.cshtml" />
-    <None Include="Pages\Shared\_ValidationScriptsPartial.cshtml" />
-    <None Include="Pages\_ViewImports.cshtml" />
-    <None Include="Pages\_ViewStart.cshtml" />
+    <None Remove="dotnet-install.sh" />
   </ItemGroup>
 
   <ItemGroup>
