--- a/blog.roman015.com.csproj
+++ b/blog.roman015.com.csproj
@@ -1,25 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <Target Name="MyPreCompileTarget" BeforeTargets="Build">
-
-    <Exec Command="echo INSTALL WYAM" />
-    <Exec Command="dotnet tool install -g Wyam.Tool  --framework netcoreapp2.1" Condition=" '$(OS)' != 'Windows_NT' " />
     
-    <Exec Command="echo BUILDING WYAM" />
-    <Exec Command="/github/home/.dotnet/tools/wyam -c $(ProjectDir)WyamBlog/config.wyam -i $(ProjectDir)WyamBlog/input/ -o $(ProjectDir)Wyam/" Condition=" '$(OS)' != 'Windows_NT' " />
+    <Exec Command="echo BUILDING WYAM" Condition="'$(OS)' == 'Windows_NT'" />
     <Exec Command="wyam -c $(ProjectDir)WyamBlog\config.wyam -i $(ProjectDir)WyamBlog\input\ -o $(ProjectDir)Wyam\" Condition="'$(OS)' == 'Windows_NT'" />
        
 
-    <Exec Command="echo WYAM BUILD COMPLETE" />
+    <Exec Command="echo WYAM BUILD COMPLETE" Condition="'$(OS)' == 'Windows_NT'" />
     
-    <Exec Command="copy $(ProjectDir)Wyam\index.html $(ProjectDir)wwwroot\index.html" Condition="'$(OS)' == 'Windows_NT'" />
-    <Exec Command="cp $(ProjectDir)Wyam/index.html $(ProjectDir)wwwroot/index.html" Condition="'$(OS)' != 'Windows_NT'" />
+    <Exec Command="copy $(ProjectDir)Wyam\index.html $(ProjectDir)wwwroot\index.html" Condition="'$(OS)' == 'Windows_NT'" />   
     
-    <Exec Command="echo WYAM INDEX COPY COMPLETE " />
+    <Exec Command="echo WYAM INDEX COPY COMPLETE " Condition="'$(OS)' == 'Windows_NT'" />
   </Target>
 
   <Target Name="MyPostCompileTarget" AfterTargets="Publish">  
@@ -30,22 +25,20 @@
   </Target>
 
   <ItemGroup>
-    <Compile Remove="Pages\**" />
     <Compile Remove="WyamBlog\**" />
-    <Content Remove="Pages\**" />
     <Content Remove="WyamBlog\**" />
-    <EmbeddedResource Remove="Pages\**" />
     <EmbeddedResource Remove="WyamBlog\**" />
-    <None Remove="Pages\**" />
     <None Remove="WyamBlog\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="Startup.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="dotnet-install.sh" />
+    <None Include="Pages\Error.cshtml" />
+    <None Include="Pages\Index.cshtml" />
+    <None Include="Pages\Privacy.cshtml" />
+    <None Include="Pages\Shared\_Layout.cshtml" />
+    <None Include="Pages\Shared\_ValidationScriptsPartial.cshtml" />
+    <None Include="Pages\_ViewImports.cshtml" />
+    <None Include="Pages\_ViewStart.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
