--- a/blog.roman015.com.csproj
+++ b/blog.roman015.com.csproj
@@ -19,7 +19,7 @@
 
   <Target Name="MyPostCompileTarget" AfterTargets="Publish">  
     <Exec Command="echo COPYING WYAM FILES" />
-    <Exec Command="xcopy /Y /I /S $(ProjectDir)Wyam $(ProjectDir)$(PublishDir)Wyam" Condition="'$(OS)' == 'Windows_NT'" />
+    <Exec Command="xcopy /Y /I /S $(ProjectDir)Wyam $(PublishDir)Wyam" Condition="'$(OS)' == 'Windows_NT'" />
     <Exec Command="mkdir $(PublishDir)Wyam" Condition="'$(OS)' != 'Windows_NT'" />
     <Exec Command="cp -r $(ProjectDir)Wyam $(PublishDir)Wyam" Condition="'$(OS)' != 'Windows_NT'" />    
     <Exec Command="echo COPYING WYAM FILES COMPLETE" />
