Added BlogViewer Controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,12 @@
   },
   "AllowedHosts": "*",
   "AzureAdEnvironmentVars": {
-    "AzureAdDomain"  : "AzureAdDomain",
+    "AzureAdDomain": "AzureAdDomain",
     "AzureAdTenantId": "AzureAdTenantId",
     "AzureAdClientId": "AzureAdClientId"
+  },
+  "AzureStorageEnvironmentVars": {
+    "AzureStorageBlobConnectionString": "AzureStorageBlobConnectionString"
   }
+
 }
