--- a/HomePage.csproj
+++ b/HomePage.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="5.0.1" />
     <PackageReference Include="QRCoder" Version="1.4.1" />
+    <PackageReference Include="Radzen.Blazor" Version="3.6.3" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
