--- a/appsettings.json
+++ b/appsettings.json
@@ -14,6 +14,6 @@
   },
   "AzureStorageEnvironmentVars": {
     "AzureStorageBlobConnectionString": "AzureStorageBlobConnectionString"
-  }
-
+  },
+  "CorsOriginsEnvironmentVar": "CorsOrigins"
 }
