--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,6 @@
   "AzureStorageEnvironmentVars": {
     "AzureStorageBlobConnectionString": "AzureStorageBlobConnectionString"
   },
-  "CorsOriginsEnvironmentVar": "CorsOrigins"
+  "CorsOriginsEnvironmentVar": "CorsOrigins",
+  "RedisBackplaneConnectionStringEnvironmentVar": "RedisBackplaneConnectionString"
 }
