--- a/Roman015API.csproj
+++ b/Roman015API.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.StackExchangeRedis" Version="5.0.7" />
     <PackageReference Include="Microsoft.Identity.Web" Version="1.12.0" />
   </ItemGroup>
 
