Connection String Fix

--- a/appsettings.json
+++ b/appsettings.json
@@ -18,5 +18,6 @@
     "AzureStorageBlobConnectionString": "AzureStorageBlobConnectionString"
   },
   "CorsOriginsEnvironmentVar": "CorsOrigins",
-  "RedisBackplaneConnectionStringEnvironmentVar": "RedisBackplaneConnectionString"
+  "RedisBackplaneConnectionStringEnvironmentVar": "RedisBackplaneConnectionString",
+  "RedisBackplanePasswordEnvironmentVar": "RedisBackplanePassword"
 }
